<?xml version="1.0"?>
<package format="3">
  <name>myagv_lab</name>
  <version>1.0.0</version>
  <description>myAGV Summer School Lab: SLAM, Navigation, LLM-PDDL Delivery</description>
  <maintainer email="robotics@ucl.ac.uk">UCL Robotics and AI</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
